fix config path

--- a/data/index.html
+++ b/data/index.html
@@ -295,7 +295,7 @@
         };
 
         function loadCurrentConfig() {
-            fetch('/config')
+            fetch('./config')
                 .then(response => response.text())
                 .then(data => {
                     parseConfig(data);
